# rust_viman

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/: 20230905082650_users.up.sql  20230905134713_balances.down.sql  20230905134713_balances.up.sql
migrations/2023-08-11-114608_users/: up.sql
src/: database.rs  jwt_auth.rs  lib.rs  main.rs  models.rs  password.rs  schema.rs  utils.rs
src/middlewares/: jwt_auth.rs
src/models/: app.rs  balance.rs  errors.rs  jwt.rs  mod.rs  user.rs
src/services/: api.rs  user.rs
