[package]
name = "viman"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.3.1"
argonautica = "0.2.0"
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
serde = "1.0.183"
serde_json = "1.0.105"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.dev]
debug = true
