[package]
name = "viman"
version = "0.1.1"
edition = "2021"


[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
argonautica = "0.2.0"
chrono = "0.4.26"
dotenvy = "0.15"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
serde = "1.0.183"
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["postgres"] }
sqlx-cli = "0.7.1"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
